# wit

./: .gitignore  README.md  pyproject.toml
src/wit/: __init__.py  cli.py  config.py  converter.py  discovery.py  git.py  scraper.py  utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_converter.py  test_discovery.py  test_git.py  test_scraper.py  test_utils.py
