[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wit"
version = "1.0.0"
description = "Website in Git - Scrape websites and store content as markdown files in a git repository"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "wit", email = "wit@example.com"}
]
keywords = ["web scraping", "markdown", "git", "documentation", "archiving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
js = ["playwright>=1.40.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]

[project.scripts]
wit = "wit.cli:cli"

[project.urls]
Homepage = "https://github.com/open-veezoo/wit"
Documentation = "https://github.com/open-veezoo/wit#readme"
Repository = "https://github.com/open-veezoo/wit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
